--- a/views/dashboard/add-file.ejs
+++ b/views/dashboard/add-file.ejs
@@ -156,7 +156,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="mb-3">Add File</h5>
-                  <form>
+                  <form action="/api/add-file" method="POST" enctype="multipart/form-data">
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-floating mb-3">
@@ -165,6 +165,7 @@
                             class="form-control"
                             id="tb-fname"
                             placeholder="File Name"
+                            name="name"
                           />
                           <label for="tb-fname">File Name</label>
                         </div>
@@ -175,15 +176,16 @@
                         <select
                       class="select2 form-control"
                       style="width: 100%; height: 48px"
+                      name="folder"
                     >
                       <option>Select Folder</option>
+
+                      <% folders.map(folder=>{ %>
+
+                        <option value="<%= folder._id %>"><%= folder.name %></option>
+
+                        <% }) %>
                       
-                      <option value="AK">Folder 1</option>
-                      <option value="AK">Folder 2</option>
-                      <option value="AK">Folder 3</option>
-                      <option value="AK">Folder 4</option>
-                      <option value="AK">Folder 5</option>
-                      <option value="AK">Folder 6</option>
                     </select>
                         
                         
@@ -193,6 +195,7 @@
                           class="form-control form-control-lg"
                           id="formFileLg"
                           type="file"
+                          name="file"
                         />
                       </div>
                       <div class="col-md-6">
@@ -230,7 +233,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="mb-3">Remove File</h5>
-                  <form>
+                  <form action="/api/remove-file" method="POST" enctype="application/x-www-form-urlencoded">
                     <div class="row">
                     
                      
@@ -239,15 +242,16 @@
                         <select
                       class="select2 form-control"
                       style="width: 100%; height: 48px"
+                      name="file"
                     >
                       <option>Select Filename</option>
+
+                      <% files.map(file=>{ %>
+
+                        <option value="<%= file._id %>"><%= file.name %></option>
+
+                        <% }) %>
                       
-                        <option value="AK">File 1</option>
-                        <option value="AK">File 2</option>
-                        <option value="AK">File 3</option>
-                        <option value="AK">File 4</option>
-                        <option value="AK">File 5</option>
-                        <option value="AK">File 6</option>
                         
                       
                       
@@ -282,6 +286,37 @@
             </div>
           </div>
 
+          <div class="row">
+            <div class="col-12">
+              <div class="table-responsive">
+                <table class="table">
+                    <thead class="bg-primary text-white">
+                        <tr>
+                          <th>Name</th>
+                          <th>Folder Name</th>
+                            <th>Description</th>
+                            <th>Date</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                      <% files.map(file=>{ %>
+                        <tr>
+                          <td><%= file.name  %></td>
+                          <td><%= file.folder.name %></td>
+                          <td><%= file.desc  %></td>
+                          <td><%= file.dateCreated.toLocaleDateString('en-us', { weekday:"long", year:"numeric", month:"short", day:"numeric"})  %></td>
+                          
+                      </tr>
+                        <% }) %>
+                     
+                    </tbody>
+                </table>
+            </div>
+        
+    
+            </div>
+          </div>
           <!-- container-fluid over -->
         </div>
       </div>
