--- a/views/dashboard/add-folder.ejs
+++ b/views/dashboard/add-folder.ejs
@@ -156,7 +156,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="mb-3">Add Folder</h5>
-                  <form>
+                  <form action="/api/add-folder" method="POST" enctype="application/x-www-form-urlencoded">
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-floating mb-3">
@@ -202,64 +202,38 @@
 
           <!-- container-fluid over -->
         </div>
-    <!-- <div class="row">
-        <div class="col-12">
-          
-          <div class="card">
-            <div class="card-body">
-              <h5 class="mb-3">Remove User</h5>
-              <form>
-                <div class="row">
-                
-                 
-                  <div class="col-md-6">
-                    
-                    <select
-                  class="select2 form-control"
-                  style="width: 100%; height: 48px"
-                >
-                  <option>Select User</option>
-                  
-                    <option value="AK">Username 1</option>
-                    <option value="AK">Username 2</option>
-                    <option value="AK">Username 3</option>
-                    <option value="AK">Username 4</option>
-                    <option value="AK">Username 5</option>
-                    <option value="AK">Username 6</option>
-                    
-                  
-                  
-                </select>
-                    
-                    
-                  </div>
-                 
-                  
-                  <div class="col-12">
-                    <div class="d-md-flex align-items-center mt-3">
-                     
-                      <div class="ms-auto mt-3 mt-md-0">
-                        <button
-                          type="submit"
-                          class="btn btn-info font-medium rounded-pill px-4"
-                        >
-                          <div class="d-flex align-items-center">
-                            <i class="ti ti-send me-2 fs-4"></i>
-                            Submit
-                          </div>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
+
+        <div class="row">
+          <div class="col-12">
+            <div class="table-responsive">
+              <table class="table">
+                  <thead class="bg-primary text-white">
+                      <tr>
+                          <th>Id</th>
+                          <th>Name</th>
+                          <th>Date</th>
+                          
+                      </tr>
+                  </thead>
+                  <tbody>
+                    <% folders.map(folder=>{ %>
+                      <tr>
+                        <td><%= folder._id %></td>
+                        <td><%= folder.name  %></td>
+                        <td><%= folder.dateCreated.toLocaleDateString('en-us', { weekday:"long", year:"numeric", month:"short", day:"numeric"})  %></td>
+                        
+                    </tr>
+                      <% }) %>
+                   
+                  </tbody>
+              </table>
           </div>
-          
       
+  
+          </div>
         </div>
-      </div> -->
-      </div>
+
+   </div>
     </div>
 
     
