--- a/views/error.ejs
+++ b/views/error.ejs
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>404 | Songmines/title>
+    <title>404 | Songmines</title>
   </head>
   <body class="stretched">
     <div id="wrapper" class="clearfix">
