--- a/static/css/timeline.scss
+++ b/static/css/timeline.scss
@@ -46,12 +46,15 @@
   
       &:hover {
         transform: scale(10);
-        background-color: white;
+        // background-color: white;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
       }
       &:hover i {
         transform: scale(0.2);
         // transform: translateY(-6px);        
-        opacity: 1;
+        opacity: 0;
         font-size: 1.5rem;
       }
       &:hover .date {
